# Cage-Oracle

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  UfcDbSchema.sql  activate_venv.bat  matchup.py  package.json  render.yaml  requirements.txt  run_web.bat  scraper.py  ufc.db  upcoming_matchups.py
.github/workflows/: manual db updates.yml  manual.yml
api/: main.py
build-asan/: CMakeCache.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  matchupUrl.ts  metricHelpContent.tsx  types.ts
frontend/src/components/: ComparisonTable.tsx  FighterName.tsx  FighterSearch.tsx  HelpPanelContext.tsx  MatchupHistory.tsx  MatchupView.tsx  MetricHelp.tsx  MomentumBreakdownHelp.tsx  ResumeBreakdownHelp.tsx  UpcomingMatchupsView.tsx  WinProbability.tsx  useScrollHint.ts
include/: ufc_db.h
include/ufc/: AnalysisTypes.hpp  ArchetypeMatchupHistory.hpp  Fight.hpp  Fighter.hpp  FighterArchetype.hpp  FighterAttributes.hpp  FighterCareerStats.hpp  FighterMomentum.hpp  FighterResume.hpp  JsonSerialize.hpp  Matchup.hpp  MatchupAnalysis.hpp  PrefightCareer.hpp  RoundStats.hpp  ScoreBreakdown.hpp  SimilaritySearch.hpp  SqliteHelpers.hpp  UfcDatabase.hpp  WinProbability.hpp
python/: archetype_matchup_history.py  classify_archetypes.py  compute_momentum.py  compute_resume.py  find_similar.py  matchup_service.py  score_breakdown.py  tale_of_the_tape.py  ufc_db_ffi.py  win_probability.py
src/: ArchetypeMatchupHistory.cpp  Fight.cpp  Fighter.cpp  FighterArchetype.cpp  FighterAttributes.cpp  FighterCareerStats.cpp  FighterMomentum.cpp  FighterResume.cpp  JsonSerialize.cpp  Matchup.cpp  MatchupAnalysis.cpp  PrefightCareer.cpp  RoundStats.cpp  ScoreBreakdown.cpp  SimilaritySearch.cpp  UfcDatabase.cpp  WinProbability.cpp  ufc_db.cpp  ufc_server.cpp
